CHANGES.txt - 10/02/2002
------------------------

CHANGES IN HTMLDOC v1.8.23

    BUG FIXES

	- HTMLDOC tried to format tables with no rows or
	  columns. While the HTML in technically not in error,
	  it is not exactly something you'd expect someone to
	  do.
	- HTMLDOC didn't report an error when it could not
	  find the specified title page file.
	- HTMLDOC could crash if it was unable to create its
	  output files.
	- HTMLDOC could crash when writing HTML output
	  containing unknown HTML elements.
	- HTMLDOC could crash when writing HTML output if the
	  output document had no title.
	- The htmlGetText() function used a fixed-size (10k)
	  buffer which allowed for a buffer overflow.  The new
	  code (from HTMLDOC 1.9) allocates its buffer instead.
	- The header/footer text was not centered properly if
	  the header/footer font size was different than the
	  default body font size.


CHANGES IN HTMLDOC v1.8.22

    NEW FEATURES

	- Now support many Windows code pages in addition to ISO
	  charsets.

    BUG FIXES

	- HTMLDOC could crash when checking if a URL is already
	  cached.
	- HTMLDOC didn't adjust the top margin when changing the
	  page header if the comment didn't appear at the top of
	  a page.
	- HTMLDOC didn't initialize the right number of TOC
	  headings.
	- When using a logo image in the header, the header was
	  placed too low on the page.


CHANGES IN HTMLDOC v1.8.21

    NEW FEATURES

	- HTMLDOC now supports heading levels 1 to 15.
	- HTMLDOC now allows the author to omit headings from
	  the TOC using the _HD_OMIT_TOC attribute.
	- HTMLDOC now supports remote book files when running
	  from the command-line.
	- HTMLDOC now supports hexadecimal character constants
	  (&#xFF)

    CHANGES

	- HTMLDOC now calculates the resolution of the body
	  image using the printable width instead of the page
	  width.
	- HTMLDOC should now compile out-of-the-box using the
	  Cygwin tools.
	- HTMLDOC no longer inserts whitespace between text